--- a/css/style.css
+++ b/css/style.css
@@ -423,12 +423,17 @@ body.template-dark {
     background-color: rgba(0, 0, 0, .5);
 }
 .modal-content{
+    display: flex;
+    flex-direction: column;
     position: absolute;
     top:5%;
     left:10%;
     width:80%;
     height: 90%;    
     background: #000;
+    padding: 2rem ;
+    text-align: center;
+    
 }
 @media screen and (min-width: 768px) {
     .modal-content{
@@ -441,21 +446,40 @@ body.template-dark {
 .modal-title{
     font-weight: 900;
     font-size: 2rem;
-    line-height: 1.2; 
-    text-align: center;
-    margin: 20% 0;
     color: var(--secondary-color);
 }
 @media screen and (min-width: 768px) {
     .modal-title{
-        margin:5% 0
+        font-size: 3rem;
     }
 }
 .modal-text{
-    font-size: 1rem;
+    font-size: 1.5rem;
+    height: 100%;
+    display: flex;
+    align-items: center;
    
-    text-align: center;
 }
+@media screen and (min-width: 768px) {
+    .modal-text{
+        font-size: 2rem;
+    }   
+}
+.close-button{
+    position: absolute;
+    top: 3%;
+    right: 3%;
+    font-size: 2rem;
+    color: white;
+
+}
+@media screen and (min-width: 768px) {
+   .close-button{
+    font-size: 3rem;
+    right: 1%;
+   } 
+}
+
 /* PORTFOLIO */
 
 .portfolio-grid {
