--- a/css/style.css
+++ b/css/style.css
@@ -420,30 +420,48 @@ body.template-dark {
     top:0;
     width:100%;
     height:100%;
-    background-color: rgba(0, 0, 0, .5);
+    
 }
 .modal.active{
     display: block;
 }
-
-.modal-content{
-    display: flex;
-    flex-direction: column;
+.modal-bg{
     position: absolute;
     top:5%;
     left:10%;
     width:80%;
-    height: 90%;    
-    background: #000;
+    height: 90%;   
+    background-color: rgb(0, 0, 0);
+}
+.modal-img{
+    width:auto ;
+    height: 60%;
+    margin-top:50%;
+    margin-left: 6%;
+}
+@media screen and (min-width: 768px) {
+.modal-img{
+margin:4% -3%;
+width: auto;
+height: 80%;
+}
+}
+
+.modal-content{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    width:100%;
+    height: 100%;    
+    background-color:rgba(0, 0, 0, 0.5);
     padding: 2rem ;
     text-align: center;
     
 }
 @media screen and (min-width: 768px) {
     .modal-content{
-        left:5%;
-        width:90%;
-        height: 90%;
+        width:100%;
+        height: 100%;
     }
     }
 
@@ -451,24 +469,17 @@ body.template-dark {
     font-weight: 900;
     font-size: 2rem;
     color: var(--secondary-color);
+   
 }
-@media screen and (min-width: 768px) {
-    .modal-title{
-        font-size: 3rem;
-    }
-}
+
 .modal-text{
     font-size: 1.5rem;
     height: 100%;
     display: flex;
     align-items: center;
-   
+    
 }
-@media screen and (min-width: 768px) {
-    .modal-text{
-        font-size: 2rem;
-    }   
-}
+
 .close-button{
     position: absolute;
     top: 3%;
@@ -483,6 +494,7 @@ body.template-dark {
     right: 1%;
    } 
 }
+
 
 /* PORTFOLIO */
 
