--- a/css/style.css
+++ b/css/style.css
@@ -433,7 +433,18 @@ body.template-dark {
     height: 90%;   
     background-color: rgb(0, 0, 0);
 }
-.modal-img{
+@media screen and (min-width: 768px) {
+    .modal-bg{
+    position: absolute;
+    top:5%;
+    left:2.5%;
+    width:95%;
+    height: 90%;   
+    background-color: rgb(0, 0, 0);
+}
+}
+
+.modal-img{  
     width:auto ;
     height: 60%;
     margin-top:50%;
@@ -475,9 +486,10 @@ height: 80%;
 .modal-text{
     font-size: 1.5rem;
     height: 100%;
+    width: 100%;
     display: flex;
     align-items: center;
-    
+    justify-content: center;
 }
 
 .close-button{
