--- a/css/style.css
+++ b/css/style.css
@@ -382,11 +382,13 @@ body.template-dark {
 }
 
 .card {
+    display: block;
     padding: 2rem;
     background-color: var(--dark-grey);
     aspect-ratio: 2 / 3;
     position: relative;
     transition: background var(--transition-duration) var(--transition-function);
+    color: #fff;
 }
 
 .card-ttl {
@@ -420,51 +422,21 @@ body.template-dark {
     top:0;
     width:100%;
     height:100%;
-    
+    padding: 3rem;
 }
 .modal.active{
     display: block;
 }
-.modal-bg{
-    position: absolute;
-    top:5%;
-    left:10%;
-    width:80%;
-    height: 90%;   
-    background-color: rgb(0, 0, 0);
-}
-@media screen and (min-width: 768px) {
-    .modal-bg{
-    position: absolute;
-    top:5%;
-    left:2.5%;
-    width:95%;
-    height: 90%;   
-    background-color: rgb(0, 0, 0);
-}
-}
 
-.modal-img{  
-    width:auto ;
-    height: 60%;
-    margin-top:50%;
-    margin-left: 6%;
-}
-@media screen and (min-width: 768px) {
-.modal-img{
-margin:4% 2%;
-width: auto;
-height: 80%;
-}
-}
+
 
 .modal-content{
-    position: absolute;
+    position: relative;
     display: flex;
     flex-direction: column;
     width:100%;
     height: 100%;    
-    background-color:rgba(0, 0, 0, 0.5);
+    background-color:rgba(0, 0, 0);
     padding: 2rem ;
     text-align: center;
     
@@ -474,7 +446,26 @@ height: 80%;
         width:100%;
         height: 100%;
     }
+}
+
+.modal-img{  
+    position: absolute;
+    left:2rem;
+    bottom: 2rem;
+    opacity: 0.5;
+}
+@media screen and (max-width: 767px) {
+    .modal-img{  
+        width:calc(100% - 4rem) ;
     }
+    }
+
+@media screen and (min-width: 768px) {
+.modal-img{
+    height:calc(100% - 4rem)
+    
+}
+}
 
 .modal-title{
     font-weight: 900;
